--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-circular-progress",
   "version": "1.0.0",
-  "description": "react-circular-progress React component",
+  "description": "React circular progress bar component",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -18,11 +18,19 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "aphrodite": "^1.2.3",
+    "prop-types": "^15.5.10"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
   "devDependencies": {
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.2.0",
     "nwb": "0.18.x",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
