--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.2.0",
     "nwb": "0.18.x",
     "react": "^15.6.1",
+    "react-debounce-input": "^3.1.0",
     "react-dom": "^15.6.1"
   },
   "author": "",
