--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-circular-progress",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "React circular progress bar component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.0",
+    "jest": "^22.3.0",
     "nwb": "0.18.x",
     "react": "^15.6.1",
     "react-debounce-input": "^3.1.0",
