--- a/package.json
+++ b/package.json
@@ -4,19 +4,12 @@
   "description": "React circular progress bar component",
   "main": "lib/index.js",
   "module": "es/index.js",
-  "files": [
-    "css",
-    "es",
-    "lib",
-    "umd"
-  ],
+  "files": ["css", "es", "lib", "umd"],
   "scripts": {
     "build": "nwb build-react-component",
     "clean": "nwb clean-module && nwb clean-demo",
     "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "test": "jest --env=jsdom"
   },
   "dependencies": {
     "aphrodite": "^1.2.3",
@@ -31,17 +24,14 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.0",
-    "jest": "^22.3.0",
     "nwb": "0.18.x",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^15.6.1"
+    "react-dom": "^16.2.0"
   },
   "author": "",
   "homepage": "",
   "license": "MIT",
   "repository": "",
-  "keywords": [
-    "react-component"
-  ]
+  "keywords": ["react-component"]
 }
