--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "react-circular-progress",
   "version": "0.0.1",
-  "description": "React circular progress bar component",
+  "description":
+    "Customizable circular progress bar component using React and Aphrodite",
   "main": "lib/index.js",
   "module": "es/index.js",
-  "files": [
-    "css",
-    "es",
-    "lib",
-    "umd"
-  ],
+  "files": ["css", "es", "lib", "umd"],
   "scripts": {
     "build": "nwb build-react-component",
     "clean": "nwb clean-module && nwb clean-demo",
@@ -38,7 +34,5 @@
   "homepage": "",
   "license": "MIT",
   "repository": "",
-  "keywords": [
-    "react-component"
-  ]
+  "keywords": ["react-component"]
 }
